--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,58 +10,29 @@
     <title>Website Modul 293</title>
 </head>
 <body>
+
+    <div class="sticky-elias">
+        <img class="name-background" src="src/img/elias_background.png" alt="Elias Hintergrund">
+    </div>
+
     <!-- NAVIGATIONSLEISTE -->
-
     <nav id="header-nav">
-
         <div class="container" id="desktop-nav">
             <div class="row">
                 <div class="col-6">
-        
                     <ul>
-                        <li><a class="active" href="index.html">Hallo</a></li>
-                        <li><a href="about.html">Über mich</a></li>
-                        <li><a href="contact.html">Kontakt</a></li>
+                        <li><a href="#einleitung" class="active">Hallo</a></li>
+                        <li><a href="#about">Über mich</a></li>
+                        <li><a href="#kontakt">Kontakt</a></li>
                     </ul>
-
-                    <!-- <hr class="hr-nav"> -->
-
                 </div>
             </div>
         </div>
-        
-<!--         <div class="container" id="mobile-nav">
-            <div class="row">
-                <div class="col-6">
-
-                    <a href="index.html" class="logo-link">
-                        <img src="src/img/webdesign-logo.png" alt="Das Logo von WEBDESIGN made simple">
-                    </a>
-
-                    <div class="clearfix" id="mobile-nav-dropdown">
-
-                        <div id="mobile-nav-button"><span>&equiv;</span></div>
-
-                        <div class="clearfix" id="mobile-nav-content">
-
-                            <ul>
-                                <li class="active"><a href="index.html">Startseite</a></li>
-                                <li><a href="leistungen.html">Leistungen</a></li>
-                                <li><a href="kontakt.html">Kontakt</a></li>
-                                <li><a href="impressum.html">Impressum</a></li>
-                            </ul>
-
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-        </div> -->
-
     </nav>
+
+    <!-- SECTION: Hallo -->
     <section id="einleitung">
-        <div class="container"></div>
+        <div class="container">
             <div class="row">
                 <div class="col-3">
                     <div class="einleitung-bereich">
@@ -71,7 +42,7 @@
                         </div>
                         <div class="einleitung-text">
                             <p class="einleitung-text-header">Auszubildender Informatiker (Applikationsentwicklung)</p>
-                            <p class="einleitung-text-content">Ich bin Fan von der Webentwicklung und momentant im ersten Lehrjahr. Ich arbeite viel an privaten Projekten. Darunter sind Websites, und das arbeiten mit Skript Sprachen</p>
+                            <p class="einleitung-text-content">Ich bin Fan von der Webentwicklung und momentant im ersten Lehrjahr. Ich arbeite viel an privaten Projekten. Darunter sind Websites, und das Arbeiten mit Skriptsprachen.</p>
                         </div>
                     </div>
                 </div>
@@ -82,6 +53,101 @@
                 </div>
             </div>
         </div>
-    </section>   
+    </section>
+
+    <!-- SECTION: Über mich -->
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <div class="einleitung-bereich">
+                        <div class="einleitung-title">
+                            <h1>Über mich</h1>
+                        </div>
+                        <div class="einleitung-text">
+                            <p class="einleitung-text-header">Ich bin Elias</p>
+                            <p class="einleitung-text-content">Ich bin Auszubildender Informatiker und interessiere mich besonders für Webentwicklung und Skriptsprachen. Ich arbeite oft an privaten Projekten und lerne kontinuierlich dazu.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SECTION: Kontakt -->
+    <section id="kontakt">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <header class="intro-container">
+                        <h1>Kontakt</h1>
+                        <p>Kontaktiere mich über das unten stehende Formular</p>
+                    </header>
+                </div>
+            </div>
+            <form action="https://submit-form.com/2z0jvXrOY">
+                <div class="row">
+                    <div class="col-3">
+                        <label for="firstname">Vorname</label>
+                        <input type="text" id="firstname" name="firstname" placeholder="Vorname" required="" />
+                    </div>
+                    <div class="col-3">
+                        <label for="lastname">Nachname</label>
+                        <input type="text" id="lastname" name="lastname" placeholder="Nachname" required="" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="E-Mail" pattern="(?:[a-z0-9!#$%&'*+=?^_`\{\|\}~\-]+(?:\.[a-z0-9!#$%&'*+=?^_`\{\|\}~\-]+)*|\u0022(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*\u0022)@(?:(?:[a-z0-9](?:[a-z0-9\-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9\-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9\-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])" required="" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <label for="message">Message</label>
+                        <input type="hidden" name="_feedback.whitelabel" value="false" />
+                        <textarea id="message" name="message" placeholder="Nachricht" cols="30" rows="10 required=""></textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 email-button">
+                        <button class="button" type="submit">Senden</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <script>
+        // Sanftes Scrollen
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        // Aktivieren der aktiven Klasse beim Scrollen
+        window.addEventListener('scroll', function () {
+            let sections = document.querySelectorAll('section');
+            let navLinks = document.querySelectorAll('nav a');
+
+            sections.forEach(section => {
+                let rect = section.getBoundingClientRect();
+                if (rect.top <= 0 && rect.bottom > 0) {
+                    navLinks.forEach(link => {
+                        link.classList.remove('active');
+                        if (link.getAttribute('href') === `#${section.id}`) {
+                            link.classList.add('active');
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+
 </body>
 </html>
