--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 <div class="col-6">
                     <header class="intro-container">
                         <h1>Kontakt</h1>
+                        <div class="middle-line"></div>
                         <p>Kontaktiere mich über das unten stehende Formular</p>
                     </header>
                 </div>
@@ -106,48 +107,17 @@
                     <div class="col-6">
                         <label for="message">Message</label>
                         <input type="hidden" name="_feedback.whitelabel" value="false" />
-                        <textarea id="message" name="message" placeholder="Nachricht" cols="30" rows="10 required=""></textarea>
+                        <textarea id="message" name="message" placeholder="Nachricht" cols="30" rows="10 required="></textarea>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-6 email-button">
-                        <button class="button" type="submit">Senden</button>
+                        <button class="button" type="submit"><span style="background: transparent; margin-left: 0" class="email-button">Senden</span></button>
                     </div>
                 </div>
             </form>
         </div>
     </section>
-
-    <script>
-        // Sanftes Scrollen
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-
-        // Aktivieren der aktiven Klasse beim Scrollen
-        window.addEventListener('scroll', function () {
-            let sections = document.querySelectorAll('section');
-            let navLinks = document.querySelectorAll('nav a');
-
-            sections.forEach(section => {
-                let rect = section.getBoundingClientRect();
-                if (rect.top <= 0 && rect.bottom > 0) {
-                    navLinks.forEach(link => {
-                        link.classList.remove('active');
-                        if (link.getAttribute('href') === `#${section.id}`) {
-                            link.classList.add('active');
-                        }
-                    });
-                }
-            });
-        });
-    </script>
-
+    <script src="src/js/main.js"></script>
 </body>
 </html>
