--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-3">
                     <div class="einleitung-bild">
-                        <p>Bild</p>
+                        <img class="portrait" src="src/img/bild_elias.jpg" alt="Bild von Elias">
                     </div>
                 </div>
             </div>
@@ -60,13 +60,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                    <div class="einleitung-bereich">
-                        <div class="einleitung-title">
+
+                </div>
+                <div class="col-3">
+                    <div class="about-bereich">
+                        <div class="about-title">
                             <h1>Über mich</h1>
                         </div>
-                        <div class="einleitung-text">
-                            <p class="einleitung-text-header">Ich bin Elias</p>
-                            <p class="einleitung-text-content">Ich bin Auszubildender Informatiker und interessiere mich besonders für Webentwicklung und Skriptsprachen. Ich arbeite oft an privaten Projekten und lerne kontinuierlich dazu.</p>
+                        <div class="left-line"></div>
+                        <div class="about-text">
+                            <p class="about-text-content">
+                                Hey! Ich bin Elias, 17 Jahre alt und lebe in der Schweiz in der Nähe von Basel.
+                                Aktuell bin ich in Ausbildung als Informatiker (Applikationsentwicklung), wie oben erwähnt,
+                                und beschäftige mich viel mit Programmieren und Design. In meiner Freizeit bin ich gerne kreativ,
+                                probiere neue Dinge aus, habe meine privaten Projekte oder entspanne bei Gaming, Musik und Filmen.
+                                Ich liebe es, zu reisen und neue Orte zu entdecken, weil mich fremde Kulturen und Perspektiven inspirieren.
+                                Musik begleitet mich durch den Alltag, und ich bin immer offen für neue Ideen und spannende Gespräche –
+                                also melde dich gerne!
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -86,28 +97,28 @@
                     </header>
                 </div>
             </div>
-            <form action="https://submit-form.com/2z0jvXrOY">
+            <form action="https://submit-form.com/ECdgd2AT3">
                 <div class="row">
                     <div class="col-3">
-                        <label for="firstname">Vorname</label>
-                        <input type="text" id="firstname" name="firstname" placeholder="Vorname" required="" />
+                        <label for="Vorname">Vorname</label>
+                        <input type="text" id="Vorname" name="Vorname" placeholder="Vorname" required="" />
                     </div>
                     <div class="col-3">
-                        <label for="lastname">Nachname</label>
-                        <input type="text" id="lastname" name="lastname" placeholder="Nachname" required="" />
+                        <label for="Nachname">Nachname</label>
+                        <input type="text" id="Nachname" name="Nachname" placeholder="Nachname" required="" />
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-6">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" placeholder="E-Mail" pattern="(?:[a-z0-9!#$%&'*+=?^_`\{\|\}~\-]+(?:\.[a-z0-9!#$%&'*+=?^_`\{\|\}~\-]+)*|\u0022(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*\u0022)@(?:(?:[a-z0-9](?:[a-z0-9\-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9\-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9\-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])" required="" />
+                        <label for="E-Mail">Email</label>
+                        <input type="email" id="E-Mail" name="E-Mail" placeholder="E-Mail" pattern="(?:[a-z0-9!#$%&'*+=?^_`\{\|\}~\-]+(?:\.[a-z0-9!#$%&'*+=?^_`\{\|\}~\-]+)*|\u0022(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*\u0022)@(?:(?:[a-z0-9](?:[a-z0-9\-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9\-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9\-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])" required="" />
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-6">
-                        <label for="message">Message</label>
+                        <label for="Nachricht">Nachricht</label>
                         <input type="hidden" name="_feedback.whitelabel" value="false" />
-                        <textarea id="message" name="message" placeholder="Nachricht" cols="30" rows="10 required="></textarea>
+                        <textarea id="Nachricht" name="Nachricht" placeholder="Nachricht" cols="30" rows="10 required="></textarea>
                     </div>
                 </div>
                 <div class="row">
