--- a/index.html
+++ b/index.html
@@ -122,13 +122,49 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6 email-button">
-                        <button class="button" type="submit"><span style="background: transparent; margin-left: 0" class="email-button">Senden</span></button>
+                    <div class="col-6 div-email-button">
+                        <button class="email-button" type="submit"><span style="background: transparent; margin-left: 0" class="div-email-button">Senden</span></button>
                     </div>
                 </div>
             </form>
         </div>
     </section>
+
+    <!-- FOOTER -->
+    <footer id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <div class="socials">
+                        <h3>Social Medias</h3>
+                        <p>Erreiche mich auf folgenden Social Medias</p>
+                    </div>
+                    <div class="socials-icons">
+                        <div class="icon-insta">
+                            <a href="https://instagram.com/xyzelias" target="_blank"><img src="src/img/icon_insta.png" alt="Instgram Icon"></a>
+                        </div>
+                        <div class="icon-insta">
+                            <a href="https://instagram.com/xyzelias" target="_blank"><img src="src/img/icon_tiktok.png" alt="TikTok Icon"></a>
+                        </div>
+                        <div class="icon-insta">
+                            <a href="https://instagram.com/xyzelias" target="_blank"><img src="src/img/icon_linkedin.png" alt="LinkedIn Icon"></a>
+                        </div>
+                        <div class="icon-insta">
+                            <a href="https://instagram.com/xyzelias" target="_blank"><img src="src/img/icon_x.png" alt="X Icon"></a>
+                        </div>
+                        <p class="attribution">Icons designed by Freepik</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="footer-button">
+                        <div class="div-kontakt-button">
+                            <a href="#kontakt" class="kontakt-button"><span style="background: transparent; margin-left: 0" class="div-kontakt-button">Kontakt</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="src/js/main.js"></script>
 </body>
 </html>
