--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
-    <title>Website Modul 293</title>
+    <link rel="icon" type="image/vnd.icon" href="src/img/favicon.ico">
+    <title>Portfolio Elias Felder</title>
 </head>
 <body>
 
