--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div class="row">
                 <div class="col-6">
                     <ul>
-                        <li><a href="#einleitung" class="active">Hallo</a></li>
-                        <li><a href="#about">Über mich</a></li>
-                        <li><a href="#kontakt">Kontakt</a></li>
+                        <li><a href="#einleitung" class="active hover-effect">Hallo</a></li>
+                        <li><a href="#about" class="hover-effect">Über mich</a></li>
+                        <li><a href="#kontakt" class="hover-effect">Kontakt</a></li>
                     </ul>
                 </div>
             </div>
