--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
                         <div class="icon-insta">
                             <a href="https://instagram.com/xyzelias" target="_blank"><img src="src/img/icon_insta.png" alt="Instgram Icon"></a>
                         </div>
-                        <div class="icon-insta">
-                            <a href="https://instagram.com/xyzelias" target="_blank"><img src="src/img/icon_tiktok.png" alt="TikTok Icon"></a>
+                        <div class="icon-tiktok">
+                            <a href="https://www.tiktok.com/@xyzelias" target="_blank"><img src="src/img/icon_tiktok.png" alt="TikTok Icon"></a>
                         </div>
-                        <div class="icon-insta">
-                            <a href="https://instagram.com/xyzelias" target="_blank"><img src="src/img/icon_linkedin.png" alt="LinkedIn Icon"></a>
+                        <div class="icon-linkedin">
+                            <a href="https://www.linkedin.com/in/elias-felder-4a1562329/" target="_blank"><img src="src/img/icon_linkedin.png" alt="LinkedIn Icon"></a>
                         </div>
-                        <div class="icon-insta">
-                            <a href="https://instagram.com/xyzelias" target="_blank"><img src="src/img/icon_x.png" alt="X Icon"></a>
+                        <div class="icon-x">
+                            <a href="https://x.com/XyzEliass?s=08" target="_blank"><img src="src/img/icon_x.png" alt="X Icon"></a>
                         </div>
                         <p class="attribution">Icons designed by Freepik</p>
                     </div>
