--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </header>
                 </div>
             </div>
-            <form action="https://submit-form.com/ECdgd2AT3">
+            <form action="https://formspree.io/f/xblgadzv" method="POST" id="contact-form">
                 <div class="row">
                     <div class="col-3">
                         <label for="Vorname">Vorname</label>
