--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
 
     <!-- HEADER: Einleitung -->
-    <header id="einleitung">
+    <header id="einleitung" class="scroll-section">
         <div class="container">
             <div class="row">
                 <div class="col-3">
@@ -56,7 +56,7 @@
     </header>
 
     <!-- SECTION: Über mich -->
-    <section id="about">
+    <section id="about" class="scroll-section">
         <div class="container">
             <div class="row">
                 <div class="col-3">
@@ -84,7 +84,7 @@
     </section>
 
     <!-- SECTION: Kontakt -->
-    <section id="kontakt">
+    <section id="kontakt" class="scroll-section">
         <div class="container">
             <div class="row">
                 <div class="col-6">
