--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <div class="section-header">
                 <h2 class="section-title">Kontakt</h2>
                 <div class="section-line"></div>
-                <p class="section-subtitle">Lass uns zusammen etwas Großartiges erschaffen</p>
+                <p class="section-subtitle">Lass uns zusammen etwas Grossartiges erschaffen</p>
             </div>
 
             <div class="contact-content">
