--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="nav-actions">
                 <button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
-                    <i class="fas fa-moon"></i>
+                    <i class="fas fa-sun"></i>
                 </button>
                 <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu">
                     <span></span>
@@ -89,7 +89,7 @@
                             <span class="word gradient-text">Elias</span>
                         </span>
                     </h1>
-                    <p class="hero-subtitle">Creative Developer & Designer</p>
+                    <p class="hero-subtitle">Developer im ersten Lehrjahr</p>
                     <p class="hero-description">
                         Leidenschaftlicher Entwickler im ersten Lehrjahr mit Fokus auf moderne Webentwicklung 
                         und kreative digitale Lösungen.
@@ -207,6 +207,17 @@
                         <div class="skill-progress" style="width: 60%"></div>
                     </div>
                     <span class="skill-percentage">60%</span>
+                </div>
+
+                <div class="skill-card">
+                    <div class="skill-icon">
+                        <i class="fab fa-php"></i>
+                    </div>
+                    <h3>PHP</h3>
+                    <div class="skill-level">
+                        <div class="skill-progress" style="width: 30%"></div>
+                    </div>
+                    <span class="skill-percentage">30%</span>
                 </div>
             </div>
         </div>
@@ -329,6 +340,11 @@
                         </a>
                         <a href="https://discord.com/users/545590902135980035" target="_blank" aria-label="Discord">
                             <i class="fab fa-discord"></i>
+                        </a>
+                        <a href="https://de.fiverr.com/s/XLwBPBG" target="_blank" aria-label="Fiverr">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24">
+                                <path fill="currentColor" d="M23.004 15.588a.995.995 0 1 0 .002-1.99a.995.995 0 0 0-.002 1.99m-.996-3.705h-.85c-.546 0-.84.41-.84 1.092v2.466h-1.61v-3.558h-.684c-.547 0-.84.41-.84 1.092v2.466h-1.61v-4.874h1.61v.74c.264-.574.626-.74 1.163-.74h1.972v.74c.264-.574.625-.74 1.162-.74h.527zm-6.786 1.501h-3.359c.088.546.43.858 1.006.858c.43 0 .732-.175.83-.487l1.425.4c-.351.848-1.22 1.364-2.255 1.364c-1.748 0-2.549-1.355-2.549-2.515c0-1.14.703-2.505 2.45-2.505c1.856 0 2.471 1.384 2.471 2.408c0 .224-.01.37-.02.477zm-1.562-.945c-.04-.42-.342-.81-.889-.81c-.508 0-.81.225-.908.81zM7.508 15.44h1.416l1.767-4.874h-1.62l-.86 2.837l-.878-2.837H5.72l1.787 4.874zm-6.6 0H2.51v-3.558h1.524v3.558h1.591v-4.874H2.51v-.302c0-.332.235-.536.606-.536h.918V8.412H2.85c-1.162 0-1.943.712-1.943 1.755v.4H0v1.316h.908v3.558z" />
+                            </svg>
                         </a>
                     </div>
                 </div>
