Füge Projektkarte für Ablaufdatum Manager hinzu

--- a/index.html
+++ b/index.html
@@ -271,6 +271,28 @@
                         </div>
                     </div>
                 </article>
+
+                <article class="project-card">
+                    <div class="project-image">
+                        <img src="src/img/ablaufdatum.png" alt="Ablaufdatum Manager">
+                        <div class="project-overlay">
+                            <a href="https://produkte.eliasfelder.ch" class="project-link" target="_blank">
+                                <i class="fas fa-external-link-alt"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Ablaufdatum Manager</h3>
+                        <p>Web-App zur Verwaltung von Produkten und deren Ablaufdaten.</p>
+                        <div class="project-tags">
+                            <span>HTML5</span>
+                            <span>CSS3</span>
+                            <span>JavaScript</span>
+                            <span>MySQL</span>
+                            <span>PHP</span>
+                        </div>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
