--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                             <span class="word gradient-text">Elias</span>
                         </span>
                     </h1>
-                    <p class="hero-subtitle">Developer im ersten Lehrjahr</p>
+                    <p class="hero-subtitle">Developer im zweiten Lehrjahr</p>
                     <p class="hero-description">
-                        Leidenschaftlicher Entwickler im ersten Lehrjahr mit Fokus auf moderne Webentwicklung 
+                        Leidenschaftlicher Entwickler im zweiten Lehrjahr mit Fokus auf moderne Webentwicklung 
                         und kreative digitale Lösungen.
                     </p>
                     <div class="hero-cta">
@@ -145,7 +145,7 @@
                         <div class="stat-icon">
                             <i class="fas fa-graduation-cap"></i>
                         </div>
-                        <h3>1. Lehrjahr</h3>
+                        <h3>2. Lehrjahr</h3>
                         <p>Applikationsentwicklung</p>
                     </div>
                     <div class="stat-card">
@@ -385,3 +385,4 @@
     <script src="src/js/main.js"></script>
 </body>
 </html>
+
