--- a/index.html
+++ b/index.html
@@ -314,7 +314,8 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="email" name="email" id="email" required>
+                        <input type="email" name="email" id="email" pattern="^(?=.{1,254}$)(?=.{1,64}@)(?:[A-Za-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[A-Za-z0-9!#$%&'*+/=?^_`{|}~-]+)*)@(?:(?:[\p{L}\p{N}](?:[\p{L}\p{N}-]{0,61}[\p{L}\p{N}])?)\.)+[\p{L}]{2,63}$
+" required>
                         <label for="email">Email</label>
                     </div>
 
@@ -385,4 +386,5 @@
     <script src="src/js/main.js"></script>
 </body>
 </html>
+
 
