--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         <a href="https://www.linkedin.com/in/elias-felder-4a1562329/" target="_blank" aria-label="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="https://github.com/eliasfelder" target="_blank" aria-label="GitHub">
+                        <a href="https://github.com/xyzelias" target="_blank" aria-label="GitHub">
                             <i class="fab fa-github"></i>
                         </a>
                         <a href="https://discord.com/users/545590902135980035" target="_blank" aria-label="Discord">
@@ -385,6 +385,7 @@
     <script src="src/js/main.js"></script>
 </body>
 </html>
+
 
 
 
