--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="image-wrapper">
-                        <img src="src/img/bild_elias_2025.jpg" alt="Bild von Elias Felder" class="profile-img">
+                        <img src="src/img/bild_elias.jpg" alt="Bild von Elias Felder" class="profile-img">
                         <div class="image-decoration"></div>
                     </div>
                 </div>
@@ -385,6 +385,7 @@
     <script src="src/js/main.js"></script>
 </body>
 </html>
+
 
 
 
