--- a/index.html
+++ b/index.html
@@ -256,18 +256,21 @@
                     <div class="project-image">
                         <img src="src/img/qrcode.png" alt="QR Code Generator">
                         <div class="project-overlay">
-                            <a href="https://qrcode.eliasfelder.ch" class="project-link" target="_blank">
+                            <a href="https://qrcreate.app" class="project-link" target="_blank">
                                 <i class="fas fa-external-link-alt"></i>
                             </a>
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>QR Code Generator</h3>
-                        <p>Web-App zum Erstellen von QR-Codes mit verschiedenen Anpassungsmöglichkeiten.</p>
+                        <h3>QR Create - Professional QR Code Generator</h3>
+                        <p>Kostenloser Online-QR-Code-Generator mit individuellen Designs, Farbverläufen, Logo-Einbettung und mehrsprachiger Unterstützung (DE/EN). Unterstützt URL, E-Mail, Telefon, SMS, WiFi und vCard-Formate.</p>
                         <div class="project-tags">
-                            <span>HTML5</span>
-                            <span>CSS3</span>
-                            <span>JavaScript</span>
+                            <span>React</span>
+                            <span>TypeScript</span>
+                            <span>Vite</span>
+                            <span>Tailwind CSS</span>
+                            <span>i18next</span>
+                            <span>Radix UI</span>
                         </div>
                     </div>
                 </article>
@@ -385,6 +388,7 @@
     <script src="src/js/main.js"></script>
 </body>
 </html>
+
 
 
 
