Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     </div>
                     <div class="project-content">
                         <h3>QR Create - Professional QR Code Generator</h3>
-                        <p>Kostenloser Online-QR-Code-Generator mit individuellen Designs, Farbverläufen, Logo-Einbettung und mehrsprachiger Unterstützung (DE/EN). Unterstützt URL, E-Mail, Telefon, SMS, WiFi und vCard-Formate.</p>
+                        <p>Kostenloser Online-QR-Code-Generator mit individuellen Designs, Farbverläufen, Logo-Einbettung und mehrsprachiger Unterstützung (DE/EN). Unterstützt URL, E-Mail, Telefon, SMS, WiFi, vCard-Formate und mehr.</p>
                         <div class="project-tags">
                             <span>React</span>
                             <span>TypeScript</span>
@@ -388,6 +388,7 @@
     <script src="src/js/main.js"></script>
 </body>
 </html>
+
 
 
 
