--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         <a href="https://www.tiktok.com/@xyzelias" target="_blank" aria-label="TikTok">
                             <i class="fab fa-tiktok"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/elias-felder-4a1562329/" target="_blank" aria-label="LinkedIn">
+                        <a href="https://www.linkedin.com/in/eliasfelder/" target="_blank" aria-label="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                         <a href="https://github.com/xyzelias" target="_blank" aria-label="GitHub">
@@ -388,6 +388,7 @@
     <script src="src/js/main.js"></script>
 </body>
 </html>
+
 
 
 
