Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <!-- Styles -->
     <link rel="stylesheet" href="src/css/styles.css">
-    <link rel="icon" type="image/x-icon" href="src/img/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="src/img/favicon.ico">
 </head>
 <body>
     <!-- Loader -->
@@ -388,6 +388,7 @@
     <script src="src/js/main.js"></script>
 </body>
 </html>
+
 
 
 
