Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -296,6 +296,31 @@
                         </div>
                     </div>
                 </article>
+
+                <!-- NEU: StartIQ -->
+                <article class="project-card">
+                    <div class="project-image">
+                        <img src="src/img/startiq.png" alt="StartIQ – Persönliche Startseite">
+                        <div class="project-overlay">
+                            <a href="https://startiq.app" class="project-link" target="_blank">
+                                <i class="fas fa-external-link-alt"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>StartIQ – Persönliche Startseite</h3>
+                        <p>Personalisierbare Browser-Startseite mit Uhr, Wetter-Widget, Pomodoro-Timer, Notizen, Google-Kalender-Integration, Schnelllinks und mehrsprachiger Unterstützung (DE/EN/FR). Nutzer-Authentifizierung mit Google OAuth.</p>
+                        <div class="project-tags">
+                            <span>PHP</span>
+                            <span>MySQL</span>
+                            <span>JavaScript</span>
+                            <span>CSS3</span>
+                            <span>Google OAuth</span>
+                            <span>REST API</span>
+                        </div>
+                    </div>
+                </article>
+
             </div>
         </div>
     </section>
@@ -388,6 +413,7 @@
     <script src="src/js/main.js"></script>
 </body>
 </html>
+
 
 
 
